# theia-update-plugins

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  main.rs
theia/: plugins.toml
