[package]
name = "theia_update_plugins"
version = "0.3.1"
authors = ["Tice Cosmos <tice@139.com>"]
edition = "2018"
description = "check and update theia plugins"
license = "MIT"
readme = "README.md"

[dependencies]
async-std = "1.6"
chrono = "0.4"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
quick-xml = "0.18"
serde_json = "1.0"
surf = { version = "2.0.0-alpha.5", default-features = false, features = ["native-client"] }
structopt = "0.3"
toml = "0.5"
zip = "0.5"
